# Quizler-rust

./: README.md
backend/: Cargo.toml
backend/public/: index.html
backend/src/: game.rs  gamev2.rs  main.rs  packets.rs  player.rs  socket.rs  tools.rs
frontend/: package.json  tsconfig.json
frontend/src/api/: index.ts  packets.ts
