[package]
name = "quizler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wsbps = "0.2.0"
actix-web = "4"
actix-web-actors = "4.1.0"
actix = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.16"
rand = "0.8.5"
rayon = "1.5.1"