[package]
name = "quizler"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
wsbps = "0.2.0"
actix-web = "4"
actix-web-actors = "4.1.0"
actix = "0.13.0"
log = "0.4.16"
rand = "0.8.5"
rayon = "1.5.1"
simplelog = "0.11.2"
